Closed Bug 1730287 Opened 3 years ago Closed 3 years ago

Fix startup.first_run_is_from_dmg telemetry to report first-run-not-from-dmg stats again

Categories

(Toolkit :: Printing, defect)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 + fixed
firefox94 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

After https://phabricator.services.mozilla.com/D122686 landed the startup.first_run_is_from_dmg telemetry stopped reporting stats for is-first-run-but-not-from-dmg cases. That's necessary for us to monitor the ratio of first runs that are from dmg vs those that are not. We should restore the previous behavior.

Assignee: nobody → jwatt
Status: NEW → ASSIGNED
URL: 516362
Regressions: 516362
Regressed by: 516362
No longer regressions: 516362
Has Regression Range: --- → yes
Pushed by jwatt@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c978efe3f395
Fix startup.first_run_is_from_dmg telemetry to report first-run-not-from-dmg stats. r=mstange

[Tracking Requested - why for this release]: Reverting accidental change that broke our telemetry. Necessary to gauge success of macOS first-run work.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

The patch landed in nightly and beta is affected.
:jwatt, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jwatt)

Jonathan, should we uplift this patch or can I mark it as wontfix for 93? Thanks

Comment on attachment 9240683 [details]
Bug 1730287. Fix startup.first_run_is_from_dmg telemetry to report first-run-not-from-dmg stats. r=mstange

Beta/Release Uplift Approval Request

  • User impact if declined: See comment 0.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's a telemetry tweak to revert to the previous behavior.
  • String changes made/needed:
Flags: needinfo?(jwatt)
Attachment #9240683 - Flags: approval-mozilla-beta?

Comment on attachment 9240683 [details]
Bug 1730287. Fix startup.first_run_is_from_dmg telemetry to report first-run-not-from-dmg stats. r=mstange

Approved for 93 beta 6, thanks.

Attachment #9240683 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: