Bug 1730287. Fix startup.first_run_is_from_dmg telemetry to report first-run-not-from-dmg stats. r=mstange a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D125301